--- a/menu/style.css
+++ b/menu/style.css
@@ -53,9 +53,10 @@ ul {
 }
 
 .edit:hover {
-  background-color: rgb(58, 58, 58);
+  background-color: rgb(185, 185, 185);
   transition: all 0.5s ease-out;
   border-radius: 10px;
+  width: 200px;
 }
 
 .menu-box:hover .text-menu {
@@ -64,6 +65,8 @@ ul {
 }
 
 .edit {
+  height: 100px;
+  align-items: center;
   font-size: medium;
   font-weight: normal;
   display: inline-flex;
